Añado anotación de como quitar el elemento del locale storage, falta implementarlo

--- a/tareas.html
+++ b/tareas.html
@@ -116,7 +116,7 @@
                     //CLICK A LA X PARA BORRAR UNA TAREA EN CONCRETO
                     x.addEventListener("click",()=>{
                         li.remove();
-                        
+                        //Para quitar un elemento del local storage, sacar su valor del li y compararlo con lo que hay en el local storage?
                     })
 
                     //2.5 Antes de hacer un append hay que limpiar para que no salgan duplicados
